# ai-pair-engineer

./: .env.example  .gitignore  README.md  app.py  prompts.py  pyproject.toml  review_engine.py
.streamlit/: config.toml  secrets.toml.example
diagrams/: ai-pair-engineer-architecture.excalidraw  ai-pair-engineer-review-lifecycle.excalidraw  ai-pair-engineer-streamlit-wireframe.excalidraw
sample_projects/: notification_aggregation_service.py  payment_orchestrator_service.py  ride_dispatch_worker.py
