[project]
name = "ai-pair-engineer"
version = "0.1.0"
description = "Minimal Streamlit MVP for AI-assisted backend engineering reviews."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.2.0",
    "langchain-google-genai>=1.0.7",
    "python-dotenv>=1.0.1",
    "streamlit-ace>=0.1.1",
    "streamlit>=1.36.0",
]

[tool.uv]
package = false
